# feather

./: .eslintignore  .eslintrc  .gitignore  .luacheckrc  .luarc.json  .prettierignore  404.html  AGENTS.md  CHANGELOG.md  CLAUDE.md  CLI.ROADMAP.md  CONTRIBUTING.md  LICENSE.md  PLUGINS.ROEADMAP.md  README.md  ROADMAP.md  SECURITY.md  TODO.md  components.json  currently-this-plugin-based-glittery-meteor.md  eslint.config.js  index.html  mkdocs.yml  package-lock.json  package.json  playwright.config.ts  playwright.showcase.config.ts  railway.toml  registry.json  shader-graph-plan.md  showcase.html  sitemap.xml  tsconfig.json  vite.config.ts  vite.showcase.config.ts  zensical.toml
.husky/: commit-msg  pre-commit  pre-push
assets/: index.html
cli/: .gitignore  README.md  index.html  package.json  tsconfig.json
configuration/: index.html
console/: index.html
debugger/: index.html
docs/: assets.md  cli.md  configuration.md  console.md  debugger.md  hot-reload.md  index.md  installation.md  logs.md  mcp.md  observability.md  particle-system-playground.md  performance.md  plugin-ui.md  plugins-ui.md  plugins.md  profiler.md  recommendations.md  session-replay.md  session.md  shader-graph.md  skills.md  standalone-showcase.md  texture-lab.md  time-travel.md  usage.md  vscode-extension.md
e2e/: app.spec.ts  golden.spec.ts  (+1 more)
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/binaries/: .gitignore
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: cli_actions.rs  cli_status.rs  lib.rs  main.rs  mcp_bridge.rs  ws_server.rs
(+760 files in other folders)
